Fix Vercel deployment issues
- Updated vercel.json configuration for proper static file serving
- Removed favicon reference to prevent 404 errors
- Simplified routing to ensure CSS/JS files load correctly
- Fixed MIME type issues for static assets

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://drmkgahlot.com">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico"> -->
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
