Add actual social media links for Dr. MK Gahlot
- Facebook: https://www.facebook.com/Drgahlot14/
- Instagram: https://www.instagram.com/mgahlot14/
- YouTube: https://www.youtube.com/@DRMKGAHLOT
- Updated both contact section and footer
- Added target='_blank' for external links
- Enhanced WhatsApp button with tooltip
- Updated production config with correct URLs

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
                     <div class="social-links">
                         <h4>Follow Us</h4>
                         <div class="social-icons">
-                            <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.facebook.com/Drgahlot14/" class="social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/mgahlot14/" class="social-link" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@DRMKGAHLOT" class="social-link" target="_blank"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                 </div>
@@ -282,9 +282,9 @@
                 <div class="footer-section">
                     <h4>Follow Us</h4>
                     <div class="footer-social">
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/Drgahlot14/" class="social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/mgahlot14/" class="social-link" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@DRMKGAHLOT" class="social-link" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
@@ -295,7 +295,7 @@
     </footer>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/918233666311" class="whatsapp-btn" target="_blank">
+    <a href="https://wa.me/918233666311" class="whatsapp-btn" target="_blank" title="Chat with Dr. MK Gahlot on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
