Update branding to DR MK GAHLOT (case sensitive)
- Removed 'Dr. Manish Gahlot' references throughout website
- Changed all instances to 'DR MK GAHLOT' for consistency
- Updated page title, meta tags, and Open Graph tags
- Updated navigation logo, hero section, and about section
- Updated footer and copyright information
- Updated API contact emails and confirmation messages
- Updated WhatsApp button tooltip
- Updated production config with correct branding
- Ensures case-sensitive consistency across all content

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. MK Gahlot - Ayurvedic Doctor | SRSDM</title>
-    <meta name="description" content="Dr. Manish Gahlot (Dr. MK Gahlot) - Expert Ayurvedic Doctor in Bikaner, Rajasthan. Specialized treatments, wellness guides, and holistic healing at SRSDM clinic.">
-    <meta name="keywords" content="Ayurvedic Doctor, Dr. MK Gahlot, Bikaner, Rajasthan, SRSDM, Ayurveda, Holistic Healing">
+    <title>DR MK GAHLOT - Ayurvedic Doctor | SRSDM</title>
+    <meta name="description" content="DR MK GAHLOT - Expert Ayurvedic Doctor in Bikaner, Rajasthan. Specialized treatments, wellness guides, and holistic healing at SRSDM clinic.">
+    <meta name="keywords" content="Ayurvedic Doctor, DR MK GAHLOT, Bikaner, Rajasthan, SRSDM, Ayurveda, Holistic Healing">
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Dr. MK Gahlot - Ayurvedic Doctor | SRSDM">
+    <meta property="og:title" content="DR MK GAHLOT - Ayurvedic Doctor | SRSDM">
     <meta property="og:description" content="Expert Ayurvedic Doctor in Bikaner, Rajasthan. Specialized treatments and holistic healing.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://drmkgahlot.com">
@@ -28,7 +28,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>Dr. MK Gahlot</h2>
+                <h2>DR MK GAHLOT</h2>
                 <span>SRSDM</span>
             </div>
             <ul class="nav-menu" id="nav-menu">
@@ -61,11 +61,11 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Welcome to SRSDM</h1>
-                <h2>Dr. Manish Gahlot (Dr. MK Gahlot)</h2>
+                <h2>DR MK GAHLOT</h2>
                 <p class="hero-subtitle">Expert Ayurvedic Doctor & Holistic Healer</p>
                 <p class="hero-description">
                     Experience the ancient wisdom of Ayurveda with modern care. 
-                    Dr. MK Gahlot brings years of expertise in traditional healing 
+                    DR MK GAHLOT brings years of expertise in traditional healing 
                     to help you achieve optimal health and wellness.
                 </p>
                 <div class="hero-buttons">
@@ -85,17 +85,16 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <h2>About Dr. MK Gahlot</h2>
+                <h2>About DR MK GAHLOT</h2>
                 <p>Dedicated to your health and wellness journey</p>
             </div>
             <div class="about-content">
                 <div class="about-text">
                     <h3>Your Trusted Ayurvedic Doctor</h3>
                     <p>
-                        Dr. Manish Gahlot, popularly known as Dr. MK Gahlot, is a renowned 
-                        Ayurvedic doctor with extensive experience in traditional healing practices. 
-                        Based in Bikaner, Rajasthan, he has been serving the community with 
-                        dedication and expertise.
+                        DR MK GAHLOT is a renowned Ayurvedic doctor with extensive experience 
+                        in traditional healing practices. Based in Bikaner, Rajasthan, he has 
+                        been serving the community with dedication and expertise.
                     </p>
                     <p>
                         At SRSDM clinic, we believe in the holistic approach of Ayurveda, 
@@ -253,7 +252,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Dr. MK Gahlot</h3>
+                    <h3>DR MK GAHLOT</h3>
                     <p>Expert Ayurvedic Doctor dedicated to your health and wellness journey.</p>
                     <div class="footer-contact">
                         <p><i class="fas fa-phone"></i> +91 8233666311</p>
@@ -289,13 +288,13 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Dr. MK Gahlot - SRSDM. All rights reserved.</p>
+                <p>&copy; 2024 DR MK GAHLOT - SRSDM. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/918233666311" class="whatsapp-btn" target="_blank" title="Chat with Dr. MK Gahlot on WhatsApp">
+    <a href="https://wa.me/918233666311" class="whatsapp-btn" target="_blank" title="Chat with DR MK GAHLOT on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
