Improve contact section icon spacing and clinic hours format
- Reduced gap between icons and text from 1rem to 0.5rem
- Added flex-shrink: 0 to prevent icon compression
- Changed clinic hours to single line format with pipe separator
- Fixed HTML formatting for better structure
- Improved overall contact section appearance and readability

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <i class="fas fa-clock"></i>
                             <div>
                                 <h4>Clinic Hours</h4>
-                                <p>Mon-Sat: 10 AM - 2 PM, 5 PM - 8 PM<br>Sunday: 10 AM - 2 PM</p>
+                                <p>Mon-Sat: 10 AM - 2 PM, 5 PM - 8 PM | Sunday: 10 AM - 2 PM</p>
                             </div>
                         </div>
                     </div>
