Add local images support for hero section
Hero Section Local Images:
- Updated CSS to use local ayurveda background image (assets/images/ayurveda.jpg)
- Updated HTML to use local DR MK GAHLOT image (assets/images/dr-mk-gahlot.png)
- Added professional styling for doctor image (circular, hover effects)
- Added responsive design for mobile devices
- Added cache-busting parameters to prevent browser caching

Image Styling:
- Circular doctor image (300px desktop, 250px mobile)
- Professional border and shadow effects
- Smooth hover animation (scale 1.05x)
- Object-fit cover for proper image scaling

Debug Tools:
- Created test-local.html for image testing
- Created debug-images.html for comprehensive diagnostics
- Tests both .jpg and .png file extensions
- Provides troubleshooting guidance

File Structure:
- assets/images/ayurveda.jpg (background)
- assets/images/dr-mk-gahlot.png (doctor image)
- All paths updated to use local assets

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="hero-placeholder">
-                    <i class="fas fa-user-md"></i>
-                </div>
+                <img src="assets/images/dr-mk-gahlot.png?v=1" alt="DR MK GAHLOT - Ayurvedic Doctor" class="doctor-image">
             </div>
         </div>
     </section>
