--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>DR MK GAHLOT</h2>
-                <span>SRSDM</span>
+                <img src="assets/images/logo.png" alt="SRSDM Logo" class="logo-image">
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
